# SegueGeral

./: CMakeLists.txt  configread.cpp  configread.h  configread.ui  geral.cpp  geral.h  geral.ui  main.cpp
